--- a/Course Project/CodeBook.html
+++ b/Course Project/CodeBook.html
@@ -63,7 +63,7 @@ img {
 
 <div id="codebook" class="section level1">
 <h1>CodeBook</h1>
-<p>This is a code book that describes the variables, the data, and any transformations or work that you performed to clean up the data.</p>
+<p>This is a code book that describes the variables, the data, and any transformations or work to clean up the data.</p>
 <div id="the-data-source" class="section level2">
 <h2>1. The data source</h2>
 <p>Original data: <a href="https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip">https://d396qusza40orc.cloudfront.net/getdata%2Fprojectfiles%2FUCI%20HAR%20Dataset.zip</a></p>
@@ -92,48 +92,8 @@ img {
 <li><p>‘train/Inertial Signals/body_gyro_x_train.txt’: The angular velocity vector measured by the gyroscope for each window sample. The units are radians/second.</p></li>
 </ul>
 </div>
-<div id="about-the-script" class="section level2">
-<h2>3. About the script</h2>
-<p>This R script called <strong><code>run_analysis.R</code></strong> does the following.</p>
-<ol style="list-style-type: decimal">
-<li>Merges the training and the test sets to create one data set.</li>
-</ol>
-<ul>
-<li>Read X_train.txt, y_train.txt, X_test.txt, y_test.txt, subject_test.txt and subject_train.txt from the “./UCI HAR Dataset” folder, and concatenate and store them in X, Y and Z variables respectively to generate a <code>10299 x 561</code> data frame.</li>
-</ul>
-<ol start="2" style="list-style-type: decimal">
-<li>Extracts only the measurements on the mean and standard deviation for each measurement.</li>
-</ol>
-<ul>
-<li><p>Read the features.txt file from the “/UCI HAR Dataset” folder and store the data in a variable called features. We only extract the measurements on the mean and standard deviation. This results in a 66 indices list. We get a subset with the 66 corresponding columns.</p></li>
-<li><p>Clean the column names of the subset. We remove the “()” and “-” symbols in the names, as well as make the first letter of “mean” and “std” a capital letter “M” and “S” respectively.</p></li>
-</ul>
-<ol start="3" style="list-style-type: decimal">
-<li>Uses descriptive activity names to name the activities in the data set.</li>
-</ol>
-<ul>
-<li><p>Read the activity_labels.txt file from the “./data”&quot; folder and store the data in a variable called activities.</p></li>
-<li><p>Clean the activity names in the second column of activity. We first make all names to lower cases. If the name has an underscore between letters, we remove the underscore and capitalize the letter immediately after the underscore.</p></li>
-</ul>
-<ol start="4" style="list-style-type: decimal">
-<li>Appropriately labels the data set with descriptive variable names and creates the tidy data set called <strong><code>clean_dataset.txt</code></strong>.</li>
-</ol>
-<ul>
-<li><p>Transform the values of Y according to the activity data frame.</p></li>
-<li><p>Combine the S, Y and X by column to get a new cleaned <code>10299 x 68</code> data frame, output1. Properly name the first two columns, “subject” and “activity”. The “subject” column contains integers that range from 1 to 30 inclusive; the “activity” column contains 6 kinds of activity names; the last 66 columns contain measurements that range from -1 to 1 exclusive.</p></li>
-<li><p>Write the output1 out to <strong><code>clean_dataset.txt</code></strong> file in the “./data” folder.</p></li>
-</ul>
-<ol start="5" style="list-style-type: decimal">
-<li>From the data set in step 4, creates a second, independent tidy data set with the average of each variable for each activity and each subject. This tidy data set is the file <strong><code>averages_dataset.txt</code></strong>.</li>
-</ol>
-<ul>
-<li><p>We have 30 unique subjects and 6 unique activities, which result in a 180 combinations of the two. Then, for each combination, we calculate the mean of each measurement with the corresponding combination. So, after initializing the result data frame and performing the two for-loops, we get a <code>180 x 68</code> data frame.</p></li>
-<li><p>Write the result out to <strong><code>averages_dataset.txt</code></strong> file in the “./data” folder.</p></li>
-</ul>
-<p>Note: The outputs and downloaded data will be placed in a folder called <em>data</em>; this folder was created in your current working directory. The unzipped files will be placed in the <em>UCI HAR Dataset folder</em> in your current working directory.</p>
-</div>
 <div id="output-file-descriptions" class="section level2">
-<h2>4. Output file descriptions</h2>
+<h2>3. Output file descriptions</h2>
 <p>The tidy data set called <strong><code>clean_dataset.txt</code></strong> has 68 variables for 10299 observations.</p>
 <p>The second tidy data set called <strong><code>averages_dataset.txt</code></strong> has 68 variables for 180 observations.</p>
 <p>The set of variables for the 2 files are:</p>
